--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -14,17 +14,14 @@ The Samuel lab benefits from its close proximity to the Zhang lab upstairs. I ha
 
 The DNA origami work was conducted in collaboration with William Shih and spearheaded by Chenxiang Lin of the Shih lab.  It has been a pleasure to work with Chenxiang, and I thank William in particular for allowing me to rotate in his lab. I also had the unique opportunity to collaborate with my father, Mark Leifer, on the mathematical theory behind the DNA barcode detection software, which was an especially fun and rewarding experience.
 
-Thanks to the following members of the worm community for sharing advice and reagents: Massimo Hilliard,  Brent Neumann, Mei Zhen  and Nials Ringstad [SPELL CHECK!]. Thanks to
+Thanks to the following members of the worm community for sharing advice and reagents: Massimo Hilliard,  Brent Neumann, Mei Zhen  and Niels Ringstad. Thanks to
 Ed Boyden and Brian Chow of the Boyden lab who took the time to meet with me early on to discuss optogenetics. Thanks to Jeffrey Stirman for open, friendly and collegial competition. 
  
 I arrived at \textit{C. elegans} neuorscience research through a circuitous route. I owe thanks to Marcus Meister who first sparked my interest in neuroscience during a seminar lecture and then allowed me to rotate in his lab. L Mahadavan and William Ryu first introduced me to the existence of \textit{C. elegans} during a final project in Maha's class. Through them, I eventually  found my way to the Samuel lab. 
 
 Prior to Harvard, certain individuals inspired me to go to graduate school. Tom Perkins and Ashley Carter of JILA at NIST CU-Boulder gave me my first foray into  academic research, and both have been invaluable resources ever since. At critical junctures the following provided crucial encouragement when I needed it: Sidney Drell, Mark Kasevich, Benn Tannenbaum, Rick Pam and Naveen Sinha.
 
-
-To Michele Jakoulov and Jim Hogle, thank you for making the Biophysics program such a supportive home. Thanks to my friends and members of my cohort: Dan Chonde, Nate Derr, Ashley Gibbs, Bryan Harada, Alison Hill, Xavier Rios, Peter Stark  and Kevin Takasaki [ANDY SPELLCHECK]. In particular, thanks go to fellow biophysics students Benjamin Schwartz and Alex Fields for being gifted teachers and steadfast friends.
-
-
+To Michele Jakoulov and Jim Hogle, thank you for making the Biophysics program such a supportive home. Thanks to my friends and members of my cohort: Dan Chonde, Nate Derr, Ashley Gibbs, Bryan Harada, Alison Hill, Xavier Rios, Peter Stark  and Kevin Takasaki. In particular, thanks go to fellow biophysics students Benjamin Schwartz and Alex Fields for being gifted teachers and steadfast friends.
 
 Thanks to my dissertation Advisory Committee: Adam Cohen, Ed Boyden, Mark Alkema and Markus Meister; and to my Thesis Committee: Markus Meister, Yun Zhang and Florian Engert.
 
@@ -42,7 +39,7 @@ Graduate Research Fellowship under Grant No. DGE-0644491.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
-Mark Leifer helped with editing. Text is typeset in \XeTeX ~using a modified version of Jordan Suchow's template, \url{http://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}.
+Thanks to Mark Leifer and Camille Rickets for copyediting. Text is typeset in \XeTeX ~using a modified version of Jordan Suchow's template, \url{http://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}.
 
 The source code for the dissertation is available at \url{http://github.com/aleifer/dissertation}.
 
