--- a/references.bib
+++ b/references.bib
@@ -1206,6 +1206,12 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {2227--2231}
 },
 
+@misc{_arms_????,
+	title = {Arms Control Wonk • an arms control blog network},
+	url = {http://armscontrolwonk.com/},
+	howpublished = {http://armscontrolwonk.com/}
+},
+
 @article{li_multiplexed_2005,
 	title = {Multiplexed detection of pathogen {DNA} with {DNA-based} fluorescence nanobarcodes},
 	volume = {23},
@@ -1447,6 +1453,16 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	note = {{PMID:} 11741017},
 	keywords = {Animals, Central Nervous System, Humans, Locomotion, Models, Neurological, Neurons, Afferent},
 	pages = {678--683}
+},
+
+@book{holloway_stalin_1996,
+	title = {Stalin and the Bomb: The Soviet Union and Atomic Energy, 1939-1956},
+	isbn = {0300066643},
+	shorttitle = {Stalin and the Bomb},
+	publisher = {Yale University Press},
+	author = {Holloway, Mr. David},
+	month = mar,
+	year = {1996}
 },
 
 @article{douglas_dna-nanotube-induced_2007,
@@ -1840,6 +1856,17 @@ are driven and organized by proprioceptive coupling},
 	pages = {25--43}
 },
 
+@book{hoffman_dead_2009,
+	edition = {1},
+	title = {The Dead Hand: The Untold Story of the Cold War Arms Race and its Dangerous Legacy},
+	isbn = {0385524374},
+	shorttitle = {The Dead Hand},
+	publisher = {Doubleday},
+	author = {Hoffman, David E.},
+	month = sep,
+	year = {2009}
+},
+
 @article{elkes_serotonin_1993,
 	title = {Serotonin Modulates Foraging and Head Withdrawel Behaviors},
 	volume = {12},
@@ -2052,6 +2079,15 @@ are driven and organized by proprioceptive coupling},
 	year = {2010},
 	keywords = {electron transfer, molecular switches, photophysics, single‐molecule studies, super‐resolution microscopy},
 	pages = {2475--2490}
+},
+
+@book{rhodes_making_1995,
+	title = {The Making of the Atomic Bomb},
+	isbn = {0684813785},
+	publisher = {Simon \& Schuster},
+	author = {Rhodes, Richard},
+	month = aug,
+	year = {1995}
 },
 
 @article{arous_automated_2010,
@@ -2835,6 +2871,16 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 19198595},
 	keywords = {Carbocyanines, Chromosomes, Human, Pair 17, Chromosomes, Human, Pair 7, Chromosomes, Human, Pair 8, {DNA}, {DNA} Primers, {DNA-Directed} {DNA} Polymerase, {DNA}, {Single-Stranded}, Exodeoxyribonucleases, Genetic Techniques, Haplotypes, Heterozygote, Homozygote, Humans, Microscopy, Fluorescence, Polymerase Chain Reaction, Polymorphism, Single Nucleotide, Sequence Analysis, {DNA}, Staining and Labeling, Tissue Plasminogen Activator},
 	pages = {199--201}
+},
+
+@book{cajal_advice_1999,
+	edition = {1},
+	title = {Advice for a Young Investigator},
+	isbn = {0262181916},
+	publisher = {The {MIT} Press},
+	author = {Cajal, Santiago Ramón y},
+	month = feb,
+	year = {1999}
 },
 
 @article{meister_synchronous_1991,
@@ -3935,6 +3981,12 @@ These results show that the microstructure can be used as a behavioral screen fo
 	url = {http://www.chin-sang.ca/movies/C.%20elegans%20adult%20hermaphrodite.mov},
 	author = {{Chin-Sang}, Ian D.},
 	howpublished = {{http://www.chin-sang.ca/movies/C.\%20elegans\%20adult\%20hermaphrodite.mov}}
+},
+
+@misc{_restricted_????,
+	title = {Restricted Data: The Nuclear Secrecy Blog},
+	url = {http://nuclearsecrecy.com/blog/},
+	howpublished = {http://nuclearsecrecy.com/blog/}
 },
 
 @article{haspel_motoneurons_2010,
