--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,15 +1,23 @@
+%!TEX root = /Users/andy/Documents/Academics/Dissertation/thesis.tex
+
 %The abstract! (350 word limit)
 
-We have developed techniques using optogenetics and real-time computer vision to non-invasively manipulate and monitor neural activity with high spatiotemporal resolution in awake behaving \textit{Caenorhabditis elegans}. These methods are used to dissect the nematode's mechanosensory and motor circuits and to elucidate the neural control of wave propagation during forward locomotion.  Additionally, we have used similar computer vision methods to automatically detect and decode fluorescing DNA origami nanobarcodes, a new class of fluorescent reporter constructs.
+%Get rid of "We's"
+%Put everything in the past tense
 
-We first develop an optogenetic illumination system capable of real-time light delivery with high spatial resolution to specified targets in freely moving \textit{C. elegans}, the first of its kind. We use this instrument to probe the nematode's mechanosensory circuit and show that stimulation of a single mechanosensory neuron suffices to induce reversals. We also probe the motor circuit and demonstrate that inhibition of regions of cholinergic motor neurons blocks undulatory wave propagation and that muscle contractions can persist even without inputs from the cholinergic motor neurons.
 
-Next we further probe the motor circuit using optogenetic and microfluidic manipulation. We demonstrate that undulatory wave propagation during forward locomotion depends on stretch-sensitive signaling mediated by cholinergic motor neurons. Specifically we show that posterior body segments are compelled to bend in the same
-direction as anterior segments through stretch-sensitive feedback transduced by cholinergic motor neurons.
- 
-We also develop a tracking system to record intracellular calcium transients in single neurons while simultaneously monitoring macroscopic behavior of freely moving \textit{C. elegans}. We use this system to study the neural activity underlying the worm's stereotyped reversal behavior, called the omega turn. We observe calcium transients in the interneurons AVA, AVB and RIM that align to temporal features of the omega turn.
+%All of the results are new and be observed here for the first time
 
-The experiments so far all rely on optics and computer vision techniques. We apply similar methods to detect DNA origami nanorod barcodes. We develop an optimal Bayesian multiple hypothesis test to unambiguously classify each barcode as a member of one of 216 distinct barcode species.
 
+This work presents optogenetics and real-time computer vision techniques to non-invasively manipulate and monitor neural activity with high spatiotemporal resolution in awake behaving \textit{Caenorhabditis elegans}. These methods were employed to dissect the nematode's mechanosensory and motor circuits and to elucidate the neural control of wave propagation during forward locomotion.  Additionally, similar computer vision methods were used to automatically detect and decode fluorescing DNA origami nanobarcodes, a new class of fluorescent reporter constructs.
+
+An optogenetic illumination system was developed capable of real-time light delivery with high spatiotemporal resolution to specified targets in freely moving \textit{C. elegans}, the first of its kind. The instrument was used to probe the nematode's mechanosensory circuit and demonstrated that stimulation of a single mechanosensory neuron suffices to induce reversals. The instrument was also used to probe the motor circuit and demonstrated that inhibition of regions of cholinergic motor neurons blocks undulatory wave propagation and that muscle contractions can persist even without inputs from the motor neurons.
+
+The motor circuit was further probed using optogenetics and microfluidics. Undulatory wave propagation during forward locomotion was observed to depend on stretch-sensitive signaling mediated by cholinergic motor neurons. Specifically, posterior body segments are compelled to bend in the same
+direction as anterior segments through stretch-sensitive feedback. This is the first explicit demonstration of such feedback and serves as a foundation for understanding motor circuits in other organisms. 
+
+A real-time tracking system was developed to record intracellular calcium transients in single neurons while simultaneously monitoring macroscopic behavior of freely moving \textit{C. elegans}. This was used to study the worm's stereotyped reversal behavior, called the omega turn. Calcium transients corresponding to temporal features of the omega turn were observed in interneurons AVA, AVB and RIM.
+
+All experiments here relied on optics and computer vision. Similar methods were applied to detect DNA origami nanorod barcodes. An optimal Bayesian multiple hypothesis test was deployed to unambiguously classify each barcode as a member of one of 216 distinct species.
 
 Overall, this set of experiments demonstrates the powerful role that optogenetics and computer vision can play in behavioral neuroscience and quantitative biophysics.
