marks abstract edits

--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -11,13 +11,13 @@
 
 This work presents optogenetics and real-time computer vision techniques to non-invasively manipulate and monitor neural activity with high spatiotemporal resolution in awake behaving \textit{Caenorhabditis elegans}. These methods were employed to dissect the nematode's mechanosensory and motor circuits and to elucidate the neural control of wave propagation during forward locomotion.  Additionally, similar computer vision methods were used to automatically detect and decode fluorescing DNA origami nanobarcodes, a new class of fluorescent reporter constructs.
 
-An optogenetic illumination system was developed capable of real-time light delivery with high spatiotemporal resolution to specified targets in freely moving \textit{C. elegans}, the first of its kind. The instrument was used to probe the nematode's mechanosensory circuit and demonstrated that stimulation of a single mechanosensory neuron suffices to induce reversals. The instrument was also used to probe the motor circuit and demonstrated that inhibition of regions of cholinergic motor neurons blocks undulatory wave propagation and that muscle contractions can persist even without inputs from the motor neurons.
+An optogenetic instrument capable of real-time light delivery with high spatiotemporal resolution to specified targets in freely moving \textit{C. elegans}, the first such instrument of its kind, was developed. The instrument was used to probe the nematode's mechanosensory circuit, demonstrating that stimulation of a single mechanosensory neuron suffices to induce reversals. The instrument was also used to probe the motor circuit, demonstrating that inhibition of regions of cholinergic motor neurons blocks undulatory wave propagation and that muscle contractions can persist even without inputs from the motor neurons.
 
-The motor circuit was further probed using optogenetics and microfluidics. Undulatory wave propagation during forward locomotion was observed to depend on stretch-sensitive signaling mediated by cholinergic motor neurons. Specifically, posterior body segments are compelled to bend in the same
-direction as anterior segments through stretch-sensitive feedback. This is the first explicit demonstration of such feedback and serves as a foundation for understanding motor circuits in other organisms. 
+The motor circuit was further probed using optogenetics and microfluidic techniques. Undulatory wave propagation during forward locomotion was observed to depend on stretch-sensitive signaling mediated by cholinergic motor neurons. Specifically, posterior body segments are compelled, through stretch-sensitive feedback, to bend in the same
+direction as anterior segments. This is the first explicit demonstration of such feedback and serves as a foundation for understanding motor circuits in other organisms. 
 
-A real-time tracking system was developed to record intracellular calcium transients in single neurons while simultaneously monitoring macroscopic behavior of freely moving \textit{C. elegans}. This was used to study the worm's stereotyped reversal behavior, called the omega turn. Calcium transients corresponding to temporal features of the omega turn were observed in interneurons AVA, AVB and RIM.
+A real-time tracking system was developed to record intracellular calcium transients in single neurons while simultaneously monitoring macroscopic behavior of freely moving \textit{C. elegans}. This was used to study the worm's stereotyped reversal behavior, the omega turn. Calcium transients corresponding to temporal features of the omega turn were observed in interneurons AVA, AVB and RIM.
 
-All experiments here relied on optics and computer vision. Similar methods were applied to detect DNA origami nanorod barcodes. An optimal Bayesian multiple hypothesis test was deployed to unambiguously classify each barcode as a member of one of 216 distinct species.
+Optics and computer vision techniques similar to those developed for the \textit{C. elegans} experiments were also used to detect DNA origami nanorod barcodes. An optimal Bayesian multiple hypothesis test was deployed to unambiguously classify each barcode as a member of one of 216 distinct barcode species.
 
 Overall, this set of experiments demonstrates the powerful role that optogenetics and computer vision can play in behavioral neuroscience and quantitative biophysics.
