--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -19,7 +19,7 @@ Ed Boyden and Brian Chow of the Boyden lab who took the time to meet with me ear
  
 I arrived at \textit{C. elegans} neuorscience research through a circuitous route. I owe thanks to Marcus Meister who first sparked my interest in neuroscience during a seminar lecture and then allowed me to rotate in his lab. L Mahadavan and William Ryu first introduced me to the existence of \textit{C. elegans} during a final project in Maha's class. Through them, I eventually  found my way to the Samuel lab. 
 
-Prior to Harvard, certain individuals inspired me to go to graduate school. Tom Perkins and Ashley Carter of JILA at NIST CU-Boulder gave me my first foray into  academic research, and both have been invaluable resources ever since. At critical junctures the following provided crucial encouragement when I needed it: Sidney Drell, Mark Kasevich, Benn Tannenbaum, Rick Pam and Naveen Sinha.
+Prior to Harvard, certain individuals inspired me to go to graduate school. Tom Perkins and Ashley Carter of JILA at NIST CU-Boulder gave me my first foray into  academic research, and both have been invaluable resources ever since. At critical junctures the following provided crucial encouragement when I needed it: Sidney Drell, Mark Kasevich, Benn Tannenbaum, Rick Pam, David Goldhaber-Gordon, Sandy Alexander, Zev Bryant and Naveen Sinha.
 
 To Michele Jakoulov and Jim Hogle, thank you for making the Biophysics program such a supportive home. Thanks to my friends and members of my cohort: Dan Chonde, Nate Derr, Ashley Gibbs, Bryan Harada, Alison Hill, Xavier Rios, Peter Stark  and Kevin Takasaki. In particular, thanks go to fellow biophysics students Benjamin Schwartz and Alex Fields for being gifted teachers and steadfast friends.
 
