Finished background and description of instrument.
Ready for methods and discussion.
Added in Mark Alkema's circuit diagram.

--- a/references.bib
+++ b/references.bib
@@ -97,6 +97,23 @@
 	pages = {237--247}
 },
 
+@article{clark_afd_2006,
+	title = {The {AFD} sensory neurons encode multiple functions underlying thermotactic behavior in Caenorhabditis elegans},
+	volume = {26},
+	issn = {1529-2401},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16837592},
+	doi = {10.1523/JNEUROSCI.1137-06.2006},
+	abstract = {The thermotactic behaviors of Caenorhabditis elegans indicate that its thermosensory system exhibits exquisite temperature sensitivity, long-term plasticity, and the ability to transform thermosensory input into different patterns of motor output. Here, we study the physiological role of the {AFD} thermosensory neurons by quantifying intracellular calcium dynamics in response to defined temperature stimuli. We demonstrate that short-term adaptation allows {AFD} to sense temperature changes as small as 0.05 degrees C over temperature ranges as wide as 10 degrees C. We show that a bidirectional thermosensory response (increasing temperature raises and decreasing temperature lowers the level of intracellular calcium in {AFD)} allows the {AFD} neurons to phase-lock their calcium dynamics to oscillatory thermosensory inputs. By analyzing the thermosensory response of {AFD} dendrites severed from their cell bodies by femtosecond laser ablation, we show that long-term plasticity is encoded as shifts in the operating range of a putative thermoreceptor(s) in the {AFD} sensory endings. Finally, we demonstrate that {AFD} activity is directly coupled to stimulation of its postsynaptic partner {AIY.} These observations indicate that many functions underlying thermotactic behavior are properties of one sensory neuronal type. Encoding multiple functions in individual sensory neurons may enable C. elegans to perform complex behaviors with simple neuronal circuits.},
+	number = {28},
+	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+	author = {Clark, Damon A and Biron, David and Sengupta, Piali and Samuel, Aravinthan D T},
+	month = jul,
+	year = {2006},
+	note = {{PMID:} 16837592},
+	keywords = {Adaptation, Physiological, Animals, Axons, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Calcium, Dendrites, Homeodomain Proteins, Interneurons, Lasers, {Long-Term} Potentiation, Mutation, Neurons, Afferent, Neuropeptides, Receptors, Odorant, Synaptic Transmission, Temperature, Thermoreceptors},
+	pages = {7444--7451}
+},
+
 @article{wilkening_modeling_2008,
 	title = {Modeling the Incubation Period of Inhalational Anthrax},
 	volume = {28},
@@ -197,6 +214,22 @@
 	note = {{PMID:} 10571229},
 	keywords = {Amino Acid Sequence, Animals, Animals, Genetically Modified, Apoptosis, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Caspase 1, Gene Expression, Genes, Dominant, Interneurons, Ion Channels, Mechanoreceptors, Membrane Proteins, Molecular Sequence Data, Motor Activity, Mutation, Nerve Tissue Proteins, Neural Pathways, Neurons, Phenotype, Promoter Regions, Genetic, Quan Recommends, Receptors, {AMPA}, Receptors, Glutamate, Sensation},
 	pages = {347--361}
+},
+
+@article{piggott_neural_2011,
+	title = {The Neural Circuits and Synaptic Mechanisms Underlying Motor Initiation in C. elegans},
+	volume = {147},
+	issn = {1097-4172},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/22078887},
+	doi = {10.1016/j.cell.2011.08.053},
+	abstract = {C. elegans is widely used to dissect how neural circuits and genes generate behavior. During locomotion, worms initiate backward movement to change locomotion direction spontaneously or in response to sensory cues; however, the underlying neural circuits are not well defined. We applied a multidisciplinary approach to map neural circuits in freely behaving worms by integrating functional imaging, optogenetic interrogation, genetic manipulation, laser ablation, and electrophysiology. We found that a disinhibitory circuit and a stimulatory circuit together promote initiation of backward movement and that circuitry dynamics is differentially regulated by sensory cues. Both circuits require glutamatergic transmission but depend on distinct glutamate receptors. This dual mode of motor initiation control is found in mammals, suggesting that distantly related organisms with anatomically distinct nervous systems may adopt similar strategies for motor control. Additionally, our studies illustrate how a multidisciplinary approach facilitates dissection of circuit and synaptic mechanisms underlying behavior in a genetic model organism.},
+	number = {4},
+	journal = {Cell},
+	author = {Piggott, Beverly J and Liu, Jie and Feng, Zhaoyang and Wescott, Seth A and Xu, X Z Shawn},
+	month = nov,
+	year = {2011},
+	note = {{PMID:} 22078887},
+	pages = {922--933}
 },
 
 @article{kralj_electrical_2011,
@@ -356,6 +389,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	year = {1995},
 	keywords = {{PQE}  - definite citation, Sniffing / Foraging},
 	pages = {82--85}
+},
+
+@article{naumann_monitoring_2010,
+	title = {Monitoring neural activity with bioluminescence during natural behavior},
+	volume = {13},
+	issn = {1546-1726},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20305645},
+	doi = {10.1038/nn.2518},
+	abstract = {Existing techniques for monitoring neural activity in awake, freely behaving vertebrates are invasive and difficult to target to genetically identified neurons. We used bioluminescence to non-invasively monitor the activity of genetically specified neurons in freely behaving zebrafish. Transgenic fish with the Ca(2+)-sensitive photoprotein green fluorescent protein {(GFP)-Aequorin} in most neurons generated large and fast bioluminescent signals that were related to neural activity, neuroluminescence, which could be recorded continuously for many days. To test the limits of this technique, we specifically targeted {GFP-Aequorin} to the hypocretin-positive neurons of the hypothalamus. We found that neuroluminescence generated by this group of approximately 20 neurons was associated with periods of increased locomotor activity and identified two classes of neural activity corresponding to distinct swim latencies. Our neuroluminescence assay can report, with high temporal resolution and sensitivity, the activity of small subsets of neurons during unrestrained behavior.},
+	number = {4},
+	journal = {Nature Neuroscience},
+	author = {Naumann, Eva A and Kampff, Adam R and Prober, David A and Schier, Alexander F and Engert, Florian},
+	month = apr,
+	year = {2010},
+	note = {{PMID:} 20305645},
+	keywords = {Aequorin, Animals, Animals, Genetically Modified, Behavior, Animal, Green Fluorescent Proteins, Intracellular Signaling Peptides and Proteins, Luminescent Proteins, Motor Activity, Nerve Net, Neuropeptides, Zebrafish},
+	pages = {513--520}
 },
 
 @article{rust_sub-diffraction-limit_2006,
@@ -2570,6 +2620,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	keywords = {Digital electronics, Signal theory {(Telecommunication)}}
 },
 
+@article{kawano_imbalancing_2011,
+	title = {An Imbalancing Act: Gap Junctions Reduce the Backward Motor Circuit Activity to Bias C. elegans for Forward Locomotion},
+	volume = {72},
+	issn = {1097-4199},
+	shorttitle = {An Imbalancing Act},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/22099460},
+	doi = {10.1016/j.neuron.2011.09.005},
+	abstract = {A neural network can sustain and switch between different activity patterns to execute multiple behaviors. By monitoring the decision making for directional locomotion through motor circuit calcium imaging in behaving Caenorhabditis elegans {(C.} elegans), we reveal that C. elegans determines the directionality of movements by establishing an imbalanced output between the forward and backward motor circuits and that it alters directions by switching between these imbalanced states. We further demonstrate that premotor interneurons modulate endogenous motoneuron activity to establish the output imbalance. Specifically, the {UNC-7} and {UNC-9} innexin-dependent premotor interneuron-motoneuron coupling prevents a balanced output state that leads to movements without directionality. Moreover, they act as shunts to decrease the backward-circuit activity, establishing a persistent bias for the high forward-circuit output state that results in the inherent preference of C. elegans for forward locomotion. This study demonstrates that imbalanced motoneuron activity underlies directional movement and establishes gap junctions as critical modulators of the properties and outputs of neural circuits.},
+	number = {4},
+	journal = {Neuron},
+	author = {Kawano, Taizo and Po, Michelle D and Gao, Shangbang and Leung, George and Ryu, William S and Zhen, Mei},
+	month = nov,
+	year = {2011},
+	note = {{PMID:} 22099460},
+	pages = {572--586}
+},
+
 @article{andersen_self-assembly_2009,
 	title = {Self-assembly of a nanoscale {DNA} box with a controllable lid},
 	volume = {459},
@@ -3983,6 +4050,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	howpublished = {{http://www.chin-sang.ca/movies/C.\%20elegans\%20adult\%20hermaphrodite.mov}}
 },
 
+@article{iino_parallel_2009,
+	title = {Parallel use of two behavioral mechanisms for chemotaxis in Caenorhabditis elegans},
+	volume = {29},
+	issn = {1529-2401},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19403805},
+	doi = {10.1523/JNEUROSCI.3633-08.2009},
+	abstract = {Caenorhabditis elegans shows chemotaxis to various odorants and water-soluble chemoattractants such as {NaCl.} Previous studies described the pirouette mechanism for chemotaxis, in which C. elegans quickly changes the direction of locomotion by using a set of stereotyped behaviors, a pirouette, in response to a decrease in the concentration of the chemical. Here, we report the discovery of a second mechanism for chemotaxis, called the weathervane mechanism. In this strategy animals respond to a spatial gradient of chemoattractant and gradually curve toward higher concentration of the chemical. By computer simulation, we find that both of these mechanisms contribute to chemotaxis and both mechanisms need to act in parallel for efficient chemotaxis. Using laser ablation of individual neurons to examine the underlying neural circuit, we find the {ASE} sensory neurons and {AIZ} interneurons are essential for both the pirouette and weathervane mechanisms in chemotaxis to {NaCl.} Salt-conditioned animals show reversed responses in both of these behaviors, leading to avoidance of {NaCl.} These results provide a platform for detailed molecular and cellular analyses of chemotaxis and its plasticity in this model organism.},
+	number = {17},
+	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+	author = {Iino, Yuichi and Yoshida, Kazushi},
+	month = apr,
+	year = {2009},
+	note = {{PMID:} 19403805},
+	keywords = {Animals, Behavior, Animal, Caenorhabditis elegans, Chemotaxis, Locomotion, Nerve Net, Sodium Chloride},
+	pages = {5370--5380}
+},
+
 @misc{_restricted_????,
 	title = {Restricted Data: The Nuclear Secrecy Blog},
 	url = {http://nuclearsecrecy.com/blog/},
@@ -4157,6 +4241,19 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = nov,
 	year = {2009},
 	keywords = {Caenorhabditis elegans, {DLP}}
+},
+
+@article{faumont_image-free_2011,
+	title = {An {Image-Free} {Opto-Mechanical} System for Creating Virtual Environments and Imaging Neuronal Activity in Freely Moving Caenorhabditis elegans},
+	volume = {6},
+	url = {http://dx.doi.org/10.1371/journal.pone.0024666},
+	doi = {10.1371/journal.pone.0024666},
+	abstract = {Non-invasive recording in untethered animals is arguably the ultimate step in the analysis of neuronal function, but such recordings remain elusive. To address this problem, we devised a system that tracks neuron-sized fluorescent targets in real time. The system can be used to create virtual environments by optogenetic activation of sensory neurons, or to image activity in identified neurons at high magnification. By recording activity in neurons of freely moving C. elegans, we tested the long-standing hypothesis that forward and reverse locomotion are generated by distinct neuronal circuits. Surprisingly, we found motor neurons that are active during both types of locomotion, suggesting a new model of locomotion control in C. elegans. These results emphasize the importance of recording neuronal activity in freely moving animals and significantly expand the potential of imaging techniques by providing a mean to stabilize fluorescent targets.},
+	number = {9},
+	journal = {{PLoS} {ONE}},
+	author = {Faumont, Serge and Rondeau, Gary and Thiele, Tod R. and Lawton, Kristy J. and {McCormick}, Kathryn E. and Sottile, Matthew and Griesbeck, Oliver and Heckscher, Ellie S. and Roberts, William M. and Doe, Chris Q. and Lockery, Shawn R.},
+	year = {2011},
+	pages = {e24666}
 },
 
 @article{pal_dna-origami-directed_2010,
