--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 Before Handing In:
 -Verify that there are no missing or unresolved references. E.g. no "??"
+-Cite the authors of each chapter at the beginning of the work? Maybe? If time?
 -Add in Camille's Edits
 -Get Videos from Quan
 -Put all videos and supplementary material into a big zip folder
