--- a/references.bib
+++ b/references.bib
@@ -2205,8 +2205,10 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {e2550}
 },
 
-@book{stavens_learning_2011,
-	title = {Learning to drive perception for autonomous cars /},
+@phdthesis{stavens_learning_2011,
+	type = {{Ph.D.} Dissertation},
+	title = {Learning to drive perception for autonomous cars.},
+	school = {Stanford University},
 	author = {Stavens, David Michael},
 	year = {2011}
 },
