--- a/references.bib
+++ b/references.bib
@@ -54,6 +54,15 @@
 	pages = {120, 122--125}
 },
 
+@book{rasband_image_1997,
+	address = {Bethesda, Maryland, {USA}},
+	title = {Image J},
+	url = {http://imagej.nih.gov/ij/},
+	publisher = {National Institutes of Health},
+	author = {Rasband, W. S.},
+	year = {1997}
+},
+
 @misc{kaplan_foraging_2008,
 	title = {Foraging Information},
 	author = {Kaplan, Joshua},
