--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,9 @@
 \abstractpage
 \tableofcontents
 \dedicationpage
+\authorlist
 \acknowledgments
+
 
 % incluude each chapter...
 \include{chapters/introduction}
