fixed spelling errors; Linjao Luo, etc

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -4,7 +4,7 @@
 This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and supported me with deft  guidance and thoughtful mentorship. Aravi conducts science with an integrity and earnestness that I very much admire and it has been a privilege to learn from his example.
 
 
-The Samuel lab is inherently collaborative and the work here has benefited from many others within the lab. I  thank Christopher Fang-Yen for introducing me to optogenetics and for getting me started on such an exciting project. Its been a privilege to work with Quan Wen who has an incredible knack for insightful experiments. I've learned much from his lead. Marc Gershow never fails to enliven the lab and I am indebted to him for many great brainstorming sessions and for teaching me how to manage very large software projects. I have enjoyed working with Mason Klein on microscopy and optics projects.  I also thank Linjou (Sp!!?) for showing me the ropes and thank Elizabeth Kane for critical graduate student solidarity.
+The Samuel lab is inherently collaborative and the work here has benefited from many others within the lab. I  thank Christopher Fang-Yen for introducing me to optogenetics and for getting me started on such an exciting project. Its been a privilege to work with Quan Wen who has an incredible knack for insightful experiments. I've learned much from his lead. Marc Gershow never fails to enliven the lab and I am indebted to him for many great brainstorming sessions and for teaching me how to manage very large software projects. I have enjoyed working with Mason Klein on microscopy and optics projects.  I also thank Linjiao Luo for showing me the ropes and thank Elizabeth Kane for critical graduate student solidarity.
 
 I worked with the following undergraduates: Anji Tang, Laura Freeman and Konlin Shen. I thank them for their excellent work, patience and dedication. Sway Chen in particular helped conduct many of the experiments in Chapter \ref{chapter:proprioceptive}.
 
