Full page thesis captions now appear on own page
Thanks to eddie schlafly for help on this one. I ended up not using his patch exactly, because that seemed to cause problems. Instead I merely added a \clearpage command at hte begining of the create FP figure and I Changed one p! to a b!.

Next step is to add a caption header to the figure.

--- a/harvard-thesis.cls
+++ b/harvard-thesis.cls
@@ -1,3 +1,4 @@
+%!TEX root = /Users/andy/Documents/Academics/Dissertation/thesis.tex
 % -------------------------------------------------------------------
 %  @LaTeX-class-file{
 %     filename        = "harvard-thesis.cls",
@@ -31,7 +32,7 @@
 
 %Begin Andy's package additions
 \usepackage{pdfsync} %do pdf synchronization [andy]
-\usepackage[closeFloats]{fltpage}
+\usepackage[closeFloats, noSeparatorLine]{packages/fltpage} %use the custom modified fltpage package
 
 \synctex=1 % turn synctex on automatically to sync between pdf viewer [andy]
 
